--- a/src/ui/generator/style/app.scss
+++ b/src/ui/generator/style/app.scss
@@ -2,7 +2,7 @@ body {
   //padding: 10px;
   //overflow: hidden;
   //width: 400px !important;
-  max-height: 400px !important;
+  //max-height: 400px !important;
   position: relative;
   -webkit-app-region: drag;
 }
@@ -12,10 +12,26 @@ body {
 }
 
 .z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .collapsible, .side-nav {
-  box-shadow: 0 5px 12px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  border-radius: 4px !important;
+  //box-shadow: 0 5px 12px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  //border-radius: 4px !important;
+  border: none !important;
+  box-shadow: none !important;
 }
 
+
+.card{
+
+  overflow: hidden;
+  margin:0;
+  padding:0;
+}
+
+.container{
+
+  padding-top: 64px !important;
+  width: 100% !important;
+
+}
 button, select, input, .titlebar-stoplight, .titlebar-minimize, .titlebar-close, a {
   -webkit-app-region: no-drag;
 }
@@ -198,6 +214,7 @@ select.browser-default {
 
 .navbar-fixed {
   height: 64px !important;
+  position: fixed;
 }
 
 nav {
